JG-2002-09-10-0  Bugfix:    qsh jobs without or with local DISPLAY variable 
                            set have to be rejected.
                 IZ:        #342
                 Bugtraq:   4744523
                 Changed:   sge_qmaster, qsh

CR-2002-09-09-3  I18N:      fixed script errors which caused loose of some
                            messages in gridengine.pot file 
                 Bugfix:

CR-2002-09-09-1  I18N:      invalid escape sequence in one of msgid
                 Bugtraq:   #4743505
                 Changed:   inst_sgeee usage output

CR-2002-09-09-0  Testsuite: make output check of qdel test independent of
                            l10n message id

EB-2002-09-08-0  Bugfix:    schedd_job_info = true causes immense daemons
                            memory growth
                 IZ:        #374
                 Bugtraq:   #4742189
                 Review:    AH
                 Changed:   sge_schedd

AA-2002-09-05-0  I18N:      - Calculation failure in Functional policy
                            - Wrong mnemonic on qmon main window
                            - qmon dies with changes in Edit Tickets 
                              on Solaris64
                            - suspend_threshold in queue icon display nearly 
                              not visible
                 Bugtraq:   #4742082, #4729085, #4740335
                 IZ:        #350

AS-2002-09-05-1  Bugfix:    "stop" procedure for execd had hardwired execd 
                            spool dir
                 Issue:     #219
                 Bugtraq:   #4742133

AS-2002-09-05-0  Enhancem:  better error message if hostname can't be
                            resolved at commd
                 Changed:   qconf

EB-2002-09-02-1  Bugfix:    qmod help output is incomplete
                 Issue:     #354
                 Bugtraq:   #4741230
                 Review:    AH
                 Changed:   qmod

EB-2002-09-02-0  Bugfix:    load formula of the scheduler