@@ -1,3 +1,7 @@
+CR-2002-09-10-0  Bugfix:    L10N - (setlocale() returns e.g. fr_FR on LINUX)
+                            cutting of characters after "_" for building message
+                            file directory path.
+
 JG-2002-09-10-0  Bugfix:    qsh jobs without or with local DISPLAY variable 
                             set have to be rejected.
                  IZ:        #342
